# airplanes-chllg

./: #README.md#  .#README.md  Makefile  README.md  delay_model.pkl  pyproject.toml
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  enumerations.py  exploration.ipynb  features.py  model.py  train_model.py
challenge/functions/: __init__.py  feat_difference_minutes.py  feat_get_period_day.py  feat_high_season.py  get_rate_from_column.py  read_df.pf  read_df.py
data/: data_short.csv
docs/: challenge.md
reports/: stress-test.html
reports/html/: challenge___init___py.html  challenge_api_py.html  challenge_enumerations_py.html  challenge_features_py.html  challenge_functions___init___py.html  challenge_functions_feat_difference_minutes_py.html  challenge_functions_feat_get_period_day_py.html  challenge_functions_feat_high_season_py.html  challenge_functions_get_rate_from_column_py.html  challenge_functions_read_df_py.html  challenge_model_py.html  challenge_train_model_py.html  index.html  status.json
tests/api/: test_api.py
tests/model/: test_model.py
