[tool.poetry]
name = "lan"
version = "0.1.0"
description = ""
authors = ["pineiden <dpineda@uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
