[tool.poetry]
name = "lan"
version = "0.1.0"
description = ""
authors = ["pineiden <dpineda@uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyterlab = "^4.2.5"
fastapi = "^0.114.1"
sqlmodel = "^0.0.22"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
